fix: removed overlap in some section and add: implemented some media query

--- a/css/style.css
+++ b/css/style.css
@@ -5,57 +5,43 @@
     font-family: sans-serif;
 }
 
+
 /* regole generali */
 
 
-.container-full{
-    max-width: 576px;
+.main-container{
     margin-left: auto;
     margin-right: auto;
+    max-width: 1000px;
+}
+
+nav{
+    background-color: #0084FD;
+    
 
 
 }
 
-/* contenitore  generico */
+#flex-navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+    margin-bottom: 40px;
+
+
+}
 
 .container-centered{
     margin-left: 50px;
-    margin-right: 50px ;
+    margin-right: 50px;
+
 
 }
 
+/* blue section */
 
-/* contenuto centrato generico */
-
-/* inizio navbar */
-
-nav{
-    margin-bottom: 20px;
-}
-
-#container-navbar{
-   
-    background-color: #0084FD;
-
-  
-}
-
-#centra-navbar{
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-
-/* fine navbar */
-
-
-/* inizia il main */
-
-
-/* inizio blue section */
 
 #blue-section{
    display: flex;
@@ -82,15 +68,42 @@ nav{
 }
 
 .centered-cards{
-    margin-left: 50px;
-    margin-right: 50px;
+   
     display: flex;
     flex-direction: column;
     gap: 30px;
+    align-items: center;
+    
 }
 
-/* fine blue section */
+.scritte-blu{
+    color: #3CA1FD;
 
+}
+
+.paragrafi-blu{
+    color: #70899E;
+    font-weight: bold;
+    text-align: center;
+}
+
+.button-blue{
+    color: white;
+    padding: 12px;
+    background-color: #0084FD;
+    max-width: 180px;
+    border-radius: 20px;
+}
+  
+.fa-file-circle-plus{
+    font-size: 100px;
+    color: #0084FD;
+
+
+}
+
+
+/* fine blue section */
 
 
 /* violet section */
@@ -101,7 +114,7 @@ nav{
 }
 
 #container-planning{
-    width: 576px;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -109,10 +122,16 @@ nav{
     gap: 50px;
 
 }
+.flex-violet-planning{
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    
 
+}
 
 #planning-uno{
-    height: 250px;
+    width: 100%;
 
 }
 
@@ -122,26 +141,53 @@ nav{
 
 #card-bianca{
     background-color: white;
-    padding-left: 30px;
-    padding-right: 30px;
+    width: 100%;
     border-radius: 5%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 40px;
+
+
 }
 
+.scritte-bianche{
+    color: white;
+}
+
+.testo-centrato{
+    text-align: center;
+
+}
+
+.fa-arrow-down{
+    background-color: violet;
+    padding: 20px;
+    border-radius: 50%;
+
+
+}
 /* fine violet section */
 
+/* inizio testimonials */
 
-
-
-
-/* inizio sezione testimonials */
-
-
-#altezza-section-testimonials{
-    height: 1500px;
+.testimonials{
+    margin-bottom: 50px;
 }
+
+#flex-testo-testimonials{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    text-align: center;
+
+
+}
+
+.scritte-viola{
+    color: #A098E7;
+}
+
 
 .cards-viola{
     background-color: #9792E4;
@@ -169,42 +215,23 @@ nav{
     gap: 50px;
 }
 
-#centra-testimonials{
-    max-height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-
-
-}
-
-#paragrafo-centrato{
-    margin-left: 50px;
-    margin-right: 50px;
-    text-align: center;
-
-}
-
 #sposta-cards{
     display: flex;
     flex-direction: column;
     gap: 40px;
     margin-top: 70px;
 }
-
-
 /* fine testimonials */
 
+/* benefit */
 
+.flex-cards-white{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+   
 
-/* inizio benefit */
-
-
-
-
-/* fine benefit */
 
 
 
@@ -241,6 +268,59 @@ nav{
     display: flex;
     flex-direction: column;
     gap: 40px;
+
+
+}
+
+
+
+
+
+/* media query */
+
+
+
+/* tablet */
+
+@media screen and (min-width:577px) and (max-width:767px){
+
+    #blue-section {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-bottom: 80px;
+    flex-wrap: wrap;
+ }
+ 
+ #get-a-demo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    width: calc(100% / 3 * 2 - 20px / 3);
+}
+
+.blue-cards {
+    background-color: #85ddff;
+    height: auto;
+    border-radius: 5%;
+    width: calc(100% / 3 - 20px / 3 * 2);
+}
+
+#container-planning {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+}
+
+.cards-viola{
+    flex-direction: row;
+}
+
+
 
 
 }
